--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F9F9F9</color>
-    <color name="colorPrimaryDark">#F9F9F9</color>
+    <color name="colorPrimary">#d1f8f8f8</color>
+    <color name="colorPrimaryDark">#d1f8f8f8</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorAlert">#00597B</color>
     <color name="colorText">#000000</color>
     <color name="colorMenu">#00B1B9</color>
+    <color name="colorDetailText">#8e8e93</color>
+    <color name="colorEnableSetting">#f7f7f7</color>
 </resources>
