--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -86,18 +86,23 @@
             android:textSize="@dimen/text_size_16"
             android:textColor="@color/colorText"
             android:layout_margin="@dimen/activity_vertical_margin"/>
-    <View android:layout_width="match_parent" android:layout_height="1dp"
-          android:background="@android:color/darker_gray"/>
-
-    <Switch
-            android:id="@+id/ivSwitch"
+    <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/llSwitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorEnableSetting"
-            android:textSize="@dimen/text_size_16"
-            android:textColor="@color/colorText"
-            android:padding="@dimen/activity_vertical_margin"/>
-    <View android:layout_width="match_parent" android:layout_height="1dp"
-          android:background="@android:color/darker_gray"/>
+            android:orientation="vertical">
+        <View android:layout_width="match_parent" android:layout_height="1dp"
+              android:background="@android:color/darker_gray"/>
 
+        <Switch
+                android:id="@+id/ivSwitch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorEnableSetting"
+                android:textSize="@dimen/text_size_16"
+                android:textColor="@color/colorText"
+                android:padding="@dimen/activity_vertical_margin"/>
+        <View android:layout_width="match_parent" android:layout_height="1dp"
+              android:background="@android:color/darker_gray"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.appcompat.widget.LinearLayoutCompat>
