--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,10 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.SplashActivity">
-
-    <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent"
-                                                  android:layout_height="match_parent"
-                                                  android:src="@drawable/splash"/>
-
+        tools:context=".activity.SplashActivity"
+        android:background="@drawable/splash">
 </RelativeLayout>
